--- a/example_client.html
+++ b/example_client.html
@@ -20,6 +20,7 @@
         <option value="blue">Blue</option>
         <option value="yellow">Yellow</option>
       </select>
+      <input type="button" id="closechat" value="Close"/>
       <br/>
       <br/>
       <hr/>
