--- a/example_client.html
+++ b/example_client.html
@@ -12,14 +12,6 @@
     <form onsubmit="return false">
       Name:
       <input type="text" id="chatname"/>
-      Color:
-      <select id="chatcolor">
-        <option value="white">Default</option>
-        <option value="red">Red</option>
-        <option value="green">Green</option>
-        <option value="blue">Blue</option>
-        <option value="yellow">Yellow</option>
-      </select>
       <input type="button" id="closechat" value="Close"/>
       <br/>
       <br/>
@@ -31,7 +23,7 @@
       <input type="submit" id="submitchat" value="Send"/>
     </form>
     <div id="chatcontainer">
-      <p id="chat" style="border:1px solid; background-color:black">
+      <p id="chat">
       </p>
     </div>
   </body>
